# AquaBle

./: .gitignore  ASSESSMENT.md  CONFIGURATION.md  DEVELOPMENT.md  Dockerfile  MANIFEST.in  Makefile  README.md  TECH_ASSESSMENT.md  TODO.md  hacs.json  package-lock.json  pyproject.toml  pyrightconfig.json  repository.yaml  setup.cfg  test_merging.py  test_merging_standalone.py
.github/: copilot-instructions.md
.github/workflows/: build-addon.yml  build-deploy.yml  dev-build.yml  release.yml
aquable/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.json  config.yaml  pyproject.toml
aquable/src/aquable/: ble_service.py  logging_config.py  service.py
custom_components/aquable/: __init__.py  config_flow.py  manifest.json  sensor.py  strings.json
custom_components/aquable/device_control/: models.py  status_parser.py
docker/: README.md  docker-compose.yml
frontend/: package-lock.json  package.json
hassio/: CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  build.json  config.json  config.yaml  run.sh
scripts/: build-all.sh  build-and-run-local.sh  build_addon_local.sh  bump_version.sh  dev-env.sh  prepare_addon_context.sh  update_version.py
src/aquable/: ble_service.py  doser_storage.py  esphome_proxy.py  global_settings.py  light_storage.py  safe_storage.py  service.py  spa.py  unified_device_storage.py
src/aquable/api/: ha_client.py  ha_websocket.py  (+2 more)
tests/: test_ble_name_resolution.py  test_ha_client.py  test_ha_storage.py  test_logging_config.py  test_spa.py
tests/unit/: test_models.py  test_status_parser.py
(+12 files in other folders)
