[build-system]
requires = [
    "setuptools==76.0.0",
    "setuptools_scm[toml]==8.2.0",
    "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "aquable"
version = "3.0.0-dev"
description = "Home Assistant integration for controlling Chihiros aquarium devices over Bluetooth Low Energy"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "flake8",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "homeassistant>=2024.12.0",
    "pyserial>=3.5",
    "aiohttp>=3.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[project.urls]
"Source Code" = "https://github.com/caleb-venner/AquaBle"
"Bug Reports" = "https://github.com/caleb-venner/AquaBle/issues"
"Home Assistant" = "https://www.home-assistant.io/"
"Original Project" = "https://github.com/TheMicDiet/chihiros-led-control"

[tool.setuptools]
platforms = ["any"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.setuptools_scm]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",
]
extend-exclude = [
    "archive",
    ".venv",
    "build",
    "dist",
]

[tool.doc8]
max-line-length = 100
